# tblite

./: flake.nix  pyproject.toml
python/tblite/: library.py
src/tblite/scf/: iterator.f90
src/tblite/xtb/: calculator.f90
